--- a/travel-trucks/src/components/Truck/Truck.module.css
+++ b/travel-trucks/src/components/Truck/Truck.module.css
@@ -36,6 +36,14 @@
     margin-bottom: 8px;
 }
 
+.name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 70%;
+    display: inline-block;
+}
+
 .price {
     margin-right: 13px;
 }
