--- a/travel-trucks/src/components/FavoriteButton/FavoriteButton.module.css
+++ b/travel-trucks/src/components/FavoriteButton/FavoriteButton.module.css
@@ -13,7 +13,7 @@
     width: 26px;
     margin-top: 2px;
     fill: currentColor;
-    transition: fill 0.3s ease;
+    transition: fill 0.2s ease-in-out;
     transition: transform 0.2s ease-in-out;
 }
 
