--- a/travel-trucks/src/components/Loader/Loader.module.css
+++ b/travel-trucks/src/components/Loader/Loader.module.css
@@ -1,10 +1,8 @@
 .overlay {
     position: fixed;
-    top: 0;
-    left: 0;
+    display: flex;
     width: 100%;
     height: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
     background: rgba(255, 255, 255, 0.7);
@@ -15,8 +13,8 @@
 .spinner {
     width: 64px;
     height: 64px;
-    border: 6px solid #ddd;
-    border-top-color: #ff6b00;
+    border: 6px solid var(--gray-light);
+    border-top-color: var(--rating);
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
 }
