--- a/travel-trucks/src/pages/Details/Details.module.css
+++ b/travel-trucks/src/pages/Details/Details.module.css
@@ -44,12 +44,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 10px;
-    padding: 44px 52px;
     width: 631px;
-    height: 100%;
-    background: var(--inputs);
-    gap: 100px;
+    height: 588px;
+}
+
+.featuresBg {
+    background-color: var(--inputs);
+    padding: 44px 52px;
+}
+
+.reviewsBg {
+    background-color: transparent;
+
 }
 
 .description {
@@ -59,4 +67,33 @@
 .buttons {
     display: flex;
     gap: 40px;
+    position: relative;
+}
+
+.buttons button {
+    position: relative;
+    background: none;
+    border: none;
+    font-size: var(--size-h3);
+    padding: 24px 0;
+    cursor: pointer;
+    color: var(--text);
+}
+
+.buttons button.active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background-color: var(--button);
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--gray-light);
+    margin-top: -3px;
+    margin-bottom: 44px;
 }
